--- a/.github/workflows/createFile.yml
+++ b/.github/workflows/createFile.yml
@@ -9,4 +9,5 @@ jobs:
           mkdir myDir
           cd myDir
           touch test.txt
-          ls -l       
+          ls -l    
+      - uses: ./.github/actions.yml
