--- a/.github/workflows/createFile.yml
+++ b/.github/workflows/createFile.yml
@@ -10,4 +10,4 @@ jobs:
           cd myDir
           touch test.txt
           ls -l    
-      - uses: ./.github/actions.yml
+      - uses: ./.github/action.yml
