--- a/.github/workflows/createFile.yml
+++ b/.github/workflows/createFile.yml
@@ -4,9 +4,5 @@ jobs:
   create_file:
     runs-on:  ubuntu-latest
     steps: 
-    - name: makeDirectoryAndFile
-      run : |
-          mkdir myDir
-          cd myDir
-          touch test.txt
-          ls -l  
+      - name: makeDirectoryAndFile
+        run : mkdir myDir
